<resources>
    <string name="app_name">中华网校题库</string>
    <string name="wating_img_load">LOADING</string>
    <string name="search_examname_placeholder">请输入考试名称</string>
    <string name="search_examname_btn">搜索</string>
    <string name="top_head_btn_desc">返回</string>
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>
    <string name="main_switch_main_title">切换产品</string>
    <string name="main_bottom_home">首页</string>
    <string name="main_bottom_favorites">错题</string>
    <string name="main_bottom_my">我的</string>
    <string name="main_bottom_more">更多</string>
    <string name="main_wrong_options_wrong">错题</string>
    <string name="main_wrong_options_favorite">收藏</string>
    <string name="main_my_title">我的</string>
    <string name="main_my_record_title">做题记录:</string>
    <string name="main_my_nologin_title">您还没有登录</string>
    <string name="main_my_nologin_btnReg">注册</string>
    <string name="main_my_nologin_btnLogin">登录</string>
    <string name="main_my_nologin_reg_username">用户名:</string>
    <string name="main_my_nologin_reg_username_regex"><![CDATA[^[_,0-9,a-z,A-Z]+$]]></string>
    <string name="main_my_nologin_reg_username_placeholder">请输入用户名</string>
    <string name="main_my_nologin_reg_username_error_blank">用户名为空!</string>
    <string name="main_my_nologin_reg_username_error_formatter">用户名只能使用字母,数字,下划线"_"组成!</string>
    <string name="main_my_nologin_reg_password">密码:</string>
    <string name="main_my_nologin_reg_password_regex"><![CDATA[^[0-9,a-z,A-Z]+$]]></string>
    <string name="main_my_nologin_reg_password_placeholder">请输入密码</string>
    <string name="main_my_nologin_reg_password_error_blank">密码为空!</string>
    <string name="main_my_nologin_reg_password_error_formatter">密码只能使用字母,数字组成!</string>
    <string name="main_my_nologin_reg_repassword">重复密码:</string>
    <string name="main_my_nologin_reg_repassword_placeholder">请输入重复密码</string>
    <string name="main_my_nologin_reg_repassword_error_blank">重复密码为空!</string>
    <string name="main_my_nologin_reg_repassword_error_equals">两次密码不一致!</string>
    <string name="main_my_nologin_reg_name">姓名:</string>
    <string name="main_my_nologin_reg_name_regex"><![CDATA[^[\\u4e00-\\u9fa5]{2,6}$]]></string>
    <string name="main_my_nologin_reg_name_placeholder">请输入姓名</string>
    <string name="main_my_nologin_reg_name_error_blank">姓名为空!</string>
    <string name="main_my_nologin_reg_name_error_formatter">姓名只能使用2&#8211;6位汉字!</string>
    <string name="main_my_nologin_reg_email">电子邮箱:</string>
    <string name="main_my_nologin_reg_email_regex"><![CDATA[^\\w+([\\.-]?\\w+)*@\\w+([\\.-]?\\w+)*(\\.\\w{2,3})+$]]></string>
    <string name="main_my_nologin_reg_email_placeholder">请输入电子邮箱</string>
    <string name="main_my_nologin_reg_email_error_blank">电子邮箱为空!</string>
    <string name="main_my_nologin_reg_email_error_formatter">格式错误!</string>
    <string name="main_my_nologin_reg_phone">手机号码:</string>
    <string name="main_my_nologin_reg_phone_regex"><![CDATA[^[1][3,4,5,6,8]\\d{9}$]]></string>
    <string name="main_my_nologin_reg_phone_placeholder">请输入手机号码</string>
    <string name="main_my_nologin_reg_phone_error_blank">手机号码为空!</string>
    <string name="main_my_nologin_reg_phone_error_formatter">手机号格式错误!</string>
    <string name="main_my_nologin_login_account">用户名:</string>
    <string name="main_my_nologin_login_account_placeholder">请输入用户名</string>
    <string name="main_my_nologin_login_password">密码:</string>
    <string name="main_my_nologin_login_password_placeholder">请输入密码</string>
    <string name="main_my_userinfo_head_desc">用户图标</string>
    <string name="main_my_userinfo_regcode">产品未注册</string>
    <string name="main_more_title">更多</string>
    <string name="main_more_logout">退出</string>
    <string name="main_more_download_title">下载试卷</string>
    <string name="main_more_download_desc"><![CDATA[提示:\n \t下载最新发布的试卷...]]> </string>
    <string name="main_more_download_btn">下载最新试卷</string>
    <string name="main_more_feedback_title">意见反馈</string>
    <string name="main_more_feedback_placeholder">请输入您的意见或者建议</string>
    <string name="main_more_feedback_count">已输入:</string>
    <string name="main_more_feedback_btn">提交</string>
    <string name="main_more_about_title">关于应用</string>
    <string name="main_paperinfo_title">试卷详情</string>
    <string name="main_paperinfo_btn_start">开始考试</string>
    <string name="main_paperinfo_btn_continue">继续考试</string>
    <string name="main_paperinfo_btn_reset">重新开始</string>
    <string name="main_paperinfo_btn_review">查看成绩</string>
    <string name="main_paper_back_desc">返回</string>
    <string name="main_paper_card_desc">答题卡</string>
    <string name="main_paper_prev_desc">上一题</string>
    <string name="main_paper_next_desc">下一题</string>
    <string name="main_paper_fav_desc">收藏</string>
    <string name="main_paper_submit_desc">提交</string>
    <string name="main_paper_time_text">00:00:00</string>
    <string name="main_paper_exit_alert_title">退出</string>
    <string name="main_paper_exit_alert_msg">是否退出考试?</string>
    <string name="main_paper_exit_alert_btnCancel">取消</string>
    <string name="main_paper_exit_alert_btnSubmit">交卷</string>
    <string name="main_paper_exit_alert_btnConfirm">下次再做</string>
    <string name="main_paper_submit_alert_title">确认</string>
    <string name="main_paper_submit_alert_msg">是否确认交卷?</string>
    <string name="main_paper_submit_alert_btnCancel">否</string>
    <string name="main_paper_submit_alert_btnSubmit">是</string>
    <string name="main_paper_submit_process">正在交卷&#8230;&#8230;&#8230;</string>
    <string name="main_paper_submit_error">交卷失败!</string>
    <string name="main_paper_card_title">答题卡</string>
    <string name="app_name_suffix">(全国版)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usernamelab">账 号:</string>
    <string name="passwordlab">密 码:</string>
    <string name="codelab">注册码:</string>
    <string name="rememberpwd">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="login">在线登录</string>
    <string name="local_login">本地登录</string>
    <string name="register">免费注册</string>
    <string name="loginStr">此注册帐号在本系列软件中通用</string>
    <string name="usernameHint">请输入用户名</string>
    <string name="pwdHint">请输入至少6位密码</string>
    <string name="pwd2Hint">请再输入一次</string>
    <string name="nameHint">请输入真实姓名</string>
    <string name="emailHint">请输入邮箱地址</string>
    <string name="phonenumHint">请输入本人手机号码</string>
    <string name="register2">立 即 注 册</string>
    <string name="chapter">章节练习</string>
    <string name="simulate">模拟考场</string>
    <string name="examGuide">考试指南</string>
    <string name="everydayKnowledge">每日知识</string>
    <string name="communication">交流圈</string>
    <string name="randomExer">随机练习</string>
    <string name="myNotebook">我的笔记</string>
    <string name="fastExer">快速练习</string>
    <string name="myFavor">我的收藏</string>
    <string name="errorRedo">错题重做</string>
    <string name="learnRecord">学习记录</string>
    <string name="other">考试指南</string>
    <string name="daily">每日一练</string>
    <string name="homepage">首页</string>
    <string name="registerOrLogin">注册登录</string>
    <string name="aboutus">关于</string>
    <string name="setting">设置</string>
    <string name="exit">注销</string>
    <string name="setExamTime">考试时间</string>
    <string name="setTimeOk">确定</string>
    <string name="setDate">考试日期:</string>
    <string name="restTime">距离考试仅剩:</string>
    <string name="restTime1">距离</string>
    <string name="restTime2">考试仅剩:</string>
    <string name="restTime3">的考试仅剩:</string>
    <string name="nonedata">亲,木有数据</string>
    <string name="connect_error">亲,网速不给力</string>
    <string name="loadingStr2">玩命加载中</string>
	<string name="real_paper">历年真题</string>
	<string name="simulate_paper">模拟试题</string>
    <string name="exam_myAnswerStr">我的回答：</string>
    <string name="exam_sysAnswerStr">正确答案：</string>
    <string name="exam_analysisStr">答案解析: </string>
    <string name="submitStr2">确 认 提 交</string>
    <string name="exam_exitBtnStr">退 出 考 试</string>
    <string name="exam_exitSubmitBtnStr">提 交 试 卷</string>
    <string name="exam_exitCancelStr">取     消</string>
    <string name="question_directory_btn1Str">查看题目</string>
    <string name="question_directory_btn2Str">再做一次</string>
    <string name="question_doAgain">重做</string>
    <string name="question_notebook">查看题目</string>
    <string name="question_directoryStr2">做题情况</string>
    <string name="question_directoryStr">题目列表</string>
    <string name="question_directoryTitleStr">答题目录</string>
    <string name="exam_selectStr">选 题</string>
    <string name="chapter_exercise">练习</string>
    <string name="setting_date_edit">考试日期设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_checkupdate">检测新版本</string>
    <string name="setting_checkupdata">检测题库更新</string>
    <string name="new_str"> new </string>
    <string name="setting_checkupdate_when_start">启动时检查新版本</string>
    <string name="setting_share">分享好友</string>
    <string name="setting_screen_light">屏幕亮度</string>
    <string name="autoAdjust">自动调节</string>
    <string name="setting_website">访问主站</string>
    <string name="setting_clearcache">清除缓存</string>
    <string name="setting_deal">隐私协议</string>
    <string name="setting_aboutapp">关于应用</string>
    <string name="setting_sync">同步与更新</string>
    <string name="setting_logout">注销登录</string>
    <string name="setting_login">注册登录</string>
    <string name="setting_logout_2">退出当前帐号</string>
    <string name="user_qq_login_text">使用QQ帐号登录</string>
    <string name="user_sina_login_text">使用新浪微博帐号登录</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="json_parser_failed">数据解析异常</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="app_setting_surelogout">确定要退出登录吗?</string>
    <string name="sure">确定</string>
    <string name="msg_load_image_fail">图片加载失败</string>
    <string name="msg_load_userface_fail">用户头像加载失败</string>
    <string name="msg_login_success">登录成功</string>
    <string name="msg_login_fail">登录失败</string>
    <string name="msg_login_error">用户未登录 或 密码错误</string>
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="img_cancel_choose">取消</string>
    <string name="postTween">发表新帖</string>
    <string name="postDetail">帖子详情</string>
    <string name="more">更多</string>
	<string name="knowledge_everyday">每日知识</string>
	<string name="knowledge_today">今日知识</string>
    <string name="notebook_toptitle">随题笔记</string>
    <string name="notebook_write_hint">写入您的笔记</string>
    <string name="feedback_write_hint">写入您的意见或者建议</string>
    <string name="notebook_notice">已输入 0/1000</string>
    <string name="notebook_submit">提交</string>
    <string name="reloadMsg">亲，连接服务器受阻!</string>
    <string name="toptitle_record">做题记录</string>
    <string name="toptitle_notebook">做题笔记</string>
    <string name="toptile_error">错题集</string>
    <string name="error_follow_exam">按科目显示</string>
    <string name="error_forget_line">遗忘曲线</string>
    <string name="version_name">1.0</string>
    <string name="website">http://tiku.examw.com</string>
    <string name="telephone">4000 525 585</string>
    <string name="company_name"> 中华考试网(www.examw.com) </string>
    <string name="right_info">Copyright © 2007&#8211;2013 All Rights Reserved.</string>
</resources>