<?xml version="1.0" encoding="utf-8"?>
<!-- 试卷做题布局xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res/com.examw.test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!-- 顶部菜单区域 -->
  	<RelativeLayout android:id="@+id/main_paper_topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="@dimen/top_title_minHeight"
        android:background="@color/default_color"
        android:layout_centerVertical="true"
        android:gravity="center_vertical">
        
        <!-- 返回按钮 -->
        <ImageButton android:id="@+id/main_paper_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/list_left"
            android:layout_marginStart="@dimen/list_left"
            android:layout_marginRight="@dimen/list_right"
            android:layout_marginEnd="@dimen/list_right"
            android:background="@color/transparent" 
            android:src="@drawable/paper_btn_back"
            android:contentDescription="@string/main_paper_back_desc"/>
        
        <!-- 标题 -->
        <TextView android:id="@+id/main_paper_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/list_left"
            android:paddingStart="@dimen/list_left"
            android:paddingRight="@dimen/list_left"
            android:paddingEnd="@dimen/list_left"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="@dimen/fontsize_l"/>
         
        <!-- 答题卡按钮 -->
        <ImageButton android:id="@+id/main_paper_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/list_right"
            android:layout_marginStart="@dimen/list_right"
            android:layout_marginRight="@dimen/list_left"
            android:layout_marginEnd="@dimen/list_left"
            android:background="@color/transparent"
            android:src="@drawable/paper_btn_card"
            android:contentDescription="@string/main_paper_card_desc"/>
    </RelativeLayout>
    
    <!-- 中间试题区域 -->
    <org.taptwo.android.widget.ViewFlow 
            android:id="@+id/main_paper_viewflow"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/main_paper_topMenu"
        	android:layout_marginBottom="@dimen/list_bottom"
        	android:background="@color/default_pressed_color"
        	app:sidebuffer="2" />
   
    <!-- 底部菜单按钮区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/main_bottom_menuHeight"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="7.5">
        
        <!-- 上一题按钮 -->
        <ImageButton android:id="@+id/main_paper_prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent" 
            android:src="@drawable/paper_btn_prev"
            android:contentDescription="@string/main_paper_prev_desc"/> 
            
        <!-- 倒计时按钮 -->
        <TextView android:id="@+id/main_paper_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/main_paper_time_text"
            android:textColor="@color/default_color"
            android:textSize="@dimen/fontsize_s"
            android:background="@drawable/tv_time_bg" 
            android:visibility="invisible"/>
        
	    <!-- 收藏按钮 -->
        <ImageButton android:id="@+id/main_paper_fav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/transparent" 
            android:src="@drawable/paper_btn_fav_normal"
            android:contentDescription="@string/main_paper_fav_desc"
            android:visibility="invisible"/>
        
        <!-- 提交按钮 -->
        <ImageButton android:id="@+id/main_paper_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/transparent" 
            android:src="@drawable/paper_btn_submit"
            android:contentDescription="@string/main_paper_submit_desc"
            android:visibility="invisible"/>
         
        <!-- 下一题按钮 -->
         <ImageButton android:id="@+id/main_paper_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:src="@drawable/paper_btn_next"
            android:contentDescription="@string/main_paper_next_desc"/>
    </LinearLayout>
</RelativeLayout>